--- a/index.css
+++ b/index.css
@@ -22,13 +22,13 @@
 }
 
 .tooltipMudi {
-    background-color: #4a4a4a;
-    color: white;
+    background-color: #e8b9b0;
+    color: #d32a34;
     font-family: sans-serif;
     width: 360px;
     font-size: 14px;
     padding: 9px 13px;
-    border-radius: 15px;
+    border-radius: 2px;
     text-align: center;
     position: absolute;
     bottom: 15%;
@@ -238,30 +238,30 @@
 
 @media screen and (max-width:500px) {
 
-.btnsMudiContainer {
-    position: absolute;
-    width: max-content;
-    height: max-content;
-    left: 0%;
-    top: -4%;
-    z-index: 10;
-    scale: 0.75;
-}
+    .btnsMudiContainer {
+        position: absolute;
+        width: max-content;
+        height: max-content;
+        left: 0%;
+        top: -4%;
+        z-index: 10;
+        scale: 0.75;
+    }
 
     .tooltipMudi {
-    background-color: #03457c;
-    color: white;
-    font-family: sans-serif;
-    width: 300px;
-    font-size: 14px;
-    padding: 9px 13px;
-    border-radius: 15px;
-    text-align: center;
-    position: absolute;
-    bottom: 6%;
-    left: 93%;
-    filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
-}
+        background-color: #e8b9b0;
+        color: #d32a34;
+        font-family: sans-serif;
+        width: 300px;
+        font-size: 13px;
+        padding: 9px 13px;
+        border-radius: 2px;
+        text-align: center;
+        position: absolute;
+        bottom: 15%;
+        left: 100%;
+        filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
+    }
 
     .iframeMudi3D {
         background-color: white;
